update all tables

--- a/paper/1-catalog/tables/unimodal-schema.tex
+++ b/paper/1-catalog/tables/unimodal-schema.tex
@@ -39,6 +39,8 @@
         \texttt{M2\_min}           & $\mathrm{M_{\odot}}$     &
             $M_{2, \textrm{min}}$, minimum $M_2$ mass \\
         \texttt{M2\_min\_err}      & $\mathrm{M_{\odot}}$     & \\
+        \texttt{clean\_flag}       &                          &
+            [0 = good, 1 = suspicious, 2 = bad], score from by-eye vetting \\
         \vdots & & all columns from \citet{Ness:2015} \\
         \vdots & & all columns from \apogee\ \DR\ \texttt{allStar} file \\
         \hline
