updates to notebooks and results

--- a/notebooks/figures/HighK-unimodal.ipynb
+++ b/notebooks/figures/HighK-unimodal.ipynb
@@ -31,7 +31,7 @@
     "from twoface.samples_analysis import unimodal_P, MAP_sample\n",
     "from twoface.db import (db_connect, AllStar, AllVisit, AllVisitToAllStar, NessRG,\n",
     "                        StarResult, Status, JokerRun)\n",
-    "from twoface.plot import plot_two_panel, plot_phase_fold, _RV_LBL\n",
+    "from twoface.plot import plot_two_panel, plot_phase_fold, plot_data_orbits, _RV_LBL\n",
     "from twoface.mass import get_m2_min, mf"
    ]
   },
@@ -253,40 +253,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Third-party\n",
-    "from astropy.utils.misc import isiterable\n",
-    "from astropy.constants import G\n",
-    "import astropy.units as u\n",
-    "import numpy as np\n",
-    "from scipy.optimize import root\n",
-    "\n",
-    "# Project\n",
-    "from twoface.log import log as logger\n",
-    "from twoface.mass import m2_func\n",
-    "\n",
-    "def get_m2_min(m1, mf):\n",
-    "    mf = mf.to(m1.unit)\n",
-    "    if isiterable(m1) and isiterable(mf):\n",
-    "        m2s = []\n",
-    "        for x, y in zip(m1, mf):\n",
-    "            try:\n",
-    "                res = root(m2_func, x0=10., args=(x.value, 1., y.value))\n",
-    "                if not res.success:\n",
-    "                    raise RuntimeError('Unsuccessful')\n",
-    "                m2s.append(res.x[0])\n",
-    "            except Exception as e:\n",
-    "                logger.debug('Failed to compute m2_min for sample: {0}'\n",
-    "                             .format(str(e)))\n",
-    "                m2s.append(np.nan)\n",
-    "        return m2s * m1.unit\n",
-    "\n",
-    "    else:\n",
-    "        res = root(m2_func, x0=10., args=(m1.value, 1., mf.value))\n",
-    "\n",
-    "        if res.success:\n",
-    "            return res.x[0] * m1.unit\n",
-    "        else:\n",
-    "            return np.nan * m1.unit"
+    "row = tbl_with_ness[~tbl_with_ness['lnM'].mask][0]\n",
+    "m1_samples = np.exp(N(row['lnM'], row['e_logM'], size=n_samples)) * u.Msun\n",
+    "mass_func = mf(P=N(row['P'], row['P_err'], n_samples) * tbl_with_ness['P'].unit, \n",
+    "               K=N(row['K'], row['K_err'], n_samples) * tbl_with_ness['K'].unit,\n",
+    "               e=N(row['e'], row['e_err'], n_samples))\n",
+    "m2_mins = get_m2_min(m1_samples, mass_func)"
    ]
   },
   {
@@ -426,15 +398,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_catalog.write(path.join(table_path, 'highK-unimodal.fits'), overwrite=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "for name in full_catalog.colnames[:18] + full_catalog.colnames[33:37]:\n",
     "    c1 = '\\\\texttt{{{0}}}'.format(name.replace('_', '\\\\_'))\n",
     "    try:\n",
@@ -457,7 +420,104 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO: describe in README with data to use `Table.read('', astropy_native=True)`"
+    "### TODO: describe in README with data to use `QTable.read('', astropy_native=True)`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## By-eye vetting: \n",
+    "\n",
+    "Plot all of the stars, see what orbits look like bad (2) or questionable (1) fits:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_path = '../../plots/unimodal/'\n",
+    "os.makedirs(_path, exist_ok=True)\n",
+    "\n",
+    "units = dict()\n",
+    "for c in full_catalog.colnames:\n",
+    "    if full_catalog[c].unit is not None:\n",
+    "        units[c] = full_catalog[c].unit\n",
+    "    else:\n",
+    "        units[c] = 1.\n",
+    "    \n",
+    "for row in full_catalog:\n",
+    "    apogee_id = row['APOGEE_ID']\n",
+    "    star = AllStar.get_apogee_id(session, apogee_id)\n",
+    "    data = star.apogeervdata()\n",
+    "    \n",
+    "    row = row[JokerSamples._valid_keys]\n",
+    "    sample = JokerSamples(**{c: row[c]*units[c] for c in row.colnames})\n",
+    "    sample.t0 = data.t0\n",
+    "    \n",
+    "    fig, axes = plt.subplots(1, 2, figsize=(12, 5), sharey=True)\n",
+    "    \n",
+    "    plot_data_orbits(data, sample[None], highlight_P_extrema=False, \n",
+    "                     ax=axes[0], plot_kwargs=dict(alpha=1., linewidth=1.))\n",
+    "    plot_phase_fold(data, sample, ax=axes[1], label=False)\n",
+    "    axes[1].set_xlabel('phase')\n",
+    "    axes[0].set_title(apogee_id)\n",
+    "    fig.tight_layout()\n",
+    "    fig.savefig(path.join(_path, '{0}.png'.format(apogee_id)), dpi=200)\n",
+    "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# unimodal:\n",
+    "suspect = ['2M05224382+4300425', \n",
+    "           '2M08103416+3152116', '2M08423210+1107222', \n",
+    "           '2M08505498+1156503', '2M08510723+1153019',\n",
+    "           '2M08512530+1202563', '2M08542841+1113088',\n",
+    "           '2M09522871+3811487', '2M10264342+1340172', \n",
+    "           '2M10513288-0250550', '2M13162279+1739074',\n",
+    "           '2M13175687+7151180', '2M13484871+1913474',\n",
+    "           '2M15101168+6708289', '2M16342938-1248117',\n",
+    "           '2M17105698+4301117', '2M18343302+1949166',\n",
+    "           '2M18481414-0251133', '2M17223366+4850318']\n",
+    "\n",
+    "check = ['2M10211972+1437528', '2M11503930+0154015',\n",
+    "         '2M11564409+3427026', '2M13011859+2844170',\n",
+    "         '2M14064289+3001479', '2M14574438+2106271',\n",
+    "         '2M15054553+2220325', '2M15184139+0206004',\n",
+    "         '2M16131259+5043080', '2M16370809+3657115',\n",
+    "         '2M16434022+3712017', '2M18012240-0920302',\n",
+    "         '2M19205784+3747067', '2M21260907+1100178',\n",
+    "         '2M21374395+4304268', '2M09283916+5617343']\n",
+    "\n",
+    "clean_flag = np.zeros(len(full_catalog), dtype=int)\n",
+    "clean_flag[np.isin(full_catalog['APOGEE_ID'], check)] = 1\n",
+    "clean_flag[np.isin(full_catalog['APOGEE_ID'], suspect)] = 2\n",
+    "full_catalog['clean_flag'] = clean_flag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(full_catalog['clean_flag'] == 0).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_catalog.write(path.join(table_path, 'highK-unimodal.fits'), overwrite=True)"
    ]
   },
   {
